yaml/dsw/00-dsw-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coffee-dsw
  labels:
    name: dsw
