yaml/dsw/dsw-test-deploy.yaml
---
# server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsw-test-server
  labels:
    name: dsw-test-server
    type: test
  namespace: coffee-dsw
spec:
  selector:
    matchLabels:
      name: dsw-test-server
      type: test
  replicas: 1
  template:
    metadata:
      labels:
        name: dsw-test-server
        type: test
        version: 2.7.1
    spec:
      containers:
      - name: dsw-test-server
        image: datastewardshipwizard/wizard-server:2.7.1
        resources:
          limits:
            cpu: 500m
            memory: 300Mi
          requests:
            cpu: 300m
            memory: 200Mi
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 3000
        volumeMounts:
          - name: server-conf
            mountPath: /application/engine-wizard/config/application.yml
            subPath: test-application.yml
          - name: server-conf
            mountPath: /application/engine-wizard/config/integration.yml
            subPath: test-integration.yml
      volumes:
        - name: server-conf
          configMap:
            name: test-server

---
# client
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsw-test-client
  labels:
    name: dsw-test-client
    type: test
  namespace: coffee-dsw
spec:
  selector:
    matchLabels:
      name: dsw-test-client
      type: test
  replicas: 1
  template:
    metadata:
      labels:
        name: dsw-test-client
        type: test
        version: 2.7.0
    spec:
      containers:
      - name: dsw-test-client
        image: datastewardshipwizard/wizard-client:2.7.0
        resources:
          limits:
            cpu: 500m
            memory: 200Mi
          requests:
            cpu: 300m
            memory: 80Mi
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 80
        volumeMounts:
          - name: client-conf
            mountPath: /src/scss/customizations/_variables.scss
            subPath: _variables.scss
          - name: client-conf
            mountPath: /src/scss/customizations/_overrides.scss
            subPath: _overrides.scss
          - name: custom-assets
            mountPath: /usr/share/nginx/html/assets
      volumes:
        - name: client-conf
          configMap:
            name: test-client
        - name: custom-assets
          configMap:
            name: custom-assets

---
# docworker
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsw-test-docworker
  labels:
    name: dsw-test-docworker
    type: test
  namespace: coffee-dsw
spec:
  selector:
    matchLabels:
      name: dsw-test-docworker
      type: test
  replicas: 1
  template:
    metadata:
      labels:
        name: dsw-test-docworker
        type: test
        version: 2.7.0
    spec:
      containers:
      - name: dsw-test-docworker
        image: datastewardshipwizard/document-worker:2.7.0
        resources:
          limits:
            cpu: 300m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 40Mi
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: docworker-conf
            mountPath: /app/config.yml
            subPath: test-docworker.yml
      volumes:
        - name: docworker-conf
          configMap:
            name: test-docworker

---
apiVersion: v1
kind: Service
metadata:
  name: dsw-test-server
  labels:
    name: dsw-test-server
  namespace: coffee-dsw
spec:
  ports:
  - name: server
    port: 3000
  selector:
    name: dsw-test-server

---
apiVersion: v1
kind: Service
metadata:
  name: dsw-test-client
  labels:
    name: dsw-test-client
  namespace: coffee-dsw
spec:
  ports:
  - name: client
    port: 80
  selector:
    name: dsw-test-client
