yaml/dsw/rabbit.yaml
---
# rabbitmq
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: coffee-dsw
spec:
  selector:
    matchLabels:
      name: rabbitmq
  serviceName: dsw-rabbit
  replicas: 1
  template:
    metadata:
      labels:
        name: rabbitmq
        version: 3.8.9
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.8.9-management
        resources:
          limits:
            cpu: 2000m
            memory: 800Mi
          requests:
            cpu: 1000m
            memory: 500Mi
        ports:
        - containerPort: 5672
        volumeMounts:
          - mountPath: /var/lib/rabbitmq
            name: dsw-rabbit-storage
      volumes:
        - name: dsw-rabbit-storage
          persistentVolumeClaim:
            claimName: dsw-rabbit-storage

---
apiVersion: v1
kind: Service
metadata:
  name: dsw-rabbit
  labels:
    name: dsw-rabbit
  namespace: coffee-dsw
spec:
  ports:
  - name: server
    port: 5672
  clusterIP: None
  selector:
    name: rabbitmq
