yaml/dsw/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dsw-ingress
  namespace: coffee-dsw
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - api.coffee-dsw.dckube.scilifelab.se
    - coffee-dsw.dckube.scilifelab.se
    secretName: dsw-tls
  rules:
  - host: api.coffee-dsw.dckube.scilifelab.se
    http:
      paths:
      - path: "/(.*)"
        backend:
          serviceName: dsw-test-server
          servicePort: 3000
  - host: coffee-dsw.dckube.scilifelab.se
    http:
      paths:
      - path: "/(.*)"
        backend:
          serviceName: dsw-test-client
          servicePort: 80
      - path: "/appendix/(.*)"
        backend:
          serviceName: dsw-appendix
          servicePort: 80
